--- a/Views/Armes/Index.cshtml
+++ b/Views/Armes/Index.cshtml
@@ -29,9 +29,9 @@
             @Html.DisplayFor(modelItem => item.Degats)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Edit", "Edit", new { id=item.Id }, htmlAttributes: new { @class = "btn btn-default col-sm-2" }) |
+            @Html.ActionLink("Details", "Details", new { id=item.Id }, htmlAttributes: new { @class = "btn btn-default col-sm-2" }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id }, htmlAttributes: new { @class = "btn btn-default col-sm-2" })
         </td>
     </tr>
 }
