--- a/Views/Samourais/Delete.cshtml
+++ b/Views/Samourais/Delete.cshtml
@@ -26,6 +26,13 @@
         <dd>
             @Html.DisplayFor(model => model.Nom)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Arme)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Arme.Nom)
+        </dd>
 
     </dl>
 
